letter spacing and acive effects in the nav bar were causing content to go off page on mobile, fixed.

--- a/src/style/home.scss
+++ b/src/style/home.scss
@@ -129,7 +129,6 @@
   }
   .nav-wrapper > .nav-link-wrapper > .nav-link-active {
     color: #505b6a;
-    font-size: 1.5em;
     border-bottom: 1px solid transparent;
     letter-spacing: 3px;
     margin: 10px;
