--- a/src/style/navigation.scss
+++ b/src/style/navigation.scss
@@ -94,8 +94,7 @@
     .nav-link-active {
       // border-bottom: 1px solid black;
       color: #505b6a;
-      font-size: 1.5em;
-      letter-spacing: 3px;
+      font-size: 1.3em;
     }
   }
 }
